CardDetailsDialog: History tab added, fixed dialog size issues on mobile

--- a/src/styles/cardDetails.scss
+++ b/src/styles/cardDetails.scss
@@ -14,6 +14,3 @@
 .checklistItemDone {
   text-decoration: line-through;
 }
-.expansionItem {
-  padding: 0px !important;
-}
